--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2483,6 +2483,12 @@
 		position: relative;
 	}
 
+		#banner img {
+			width: 200px;
+			height: 200px;
+			margin-top: 70px;
+		}
+
 		#banner header {
 			position: absolute;
 			bottom: 0;
