--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,11 @@
 		-webkit-text-size-adjust: none;
 	}
 
+	.major i {
+		font-size: 100px;
+		margin: 5px;
+	}
+
 /* Box Model */
 
 	*, *:before, *:after {
@@ -2028,6 +2033,7 @@
 			.image.left img {
 				display: block;
 				width: 100%;
+				height: 158px;
 			}
 
 		.image.fit {
