add skills icons

--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,6 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin-bottom: 20px;
 }
 }
+.skill i {
+	font-size: 110px;
+}
